# soundexAlgorithmKata

./: .gitignore  CMakeLists.txt  README.md  SoundexTest.cpp  main.cpp
